add background image

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,10 @@
 .container {
   padding: 0 5rem;
   margin: auto;
-  max-width: 1200px;
+  /* max-width: 1200px; */
+  min-height: 88vh;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("../public/pattern-background.png");
+  background-size: cover;
 }
 
 .main {
@@ -21,7 +24,7 @@
   padding: 0 20px;
   line-height: 1.15;
   font-size: 3rem;
-  color: #113a55;
+  color: white;
 }
 
 .title,
