--- a/styles/Quran.module.css
+++ b/styles/Quran.module.css
@@ -1,10 +1,39 @@
 .title-page {
   text-align: center;
+  margin-top: 5rem;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 5px 12px;
+}
+
+.search-form input {
+  height: 35px;
+  width: 30%;
+  border: solid 3px #113a55;
+}
+
+.search-form p {
+  background-color: #113a55;
+  color: white;
+  padding: 8px 12px;
+  border-radius: 4px;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.search-form p:hover {
+  background-color: #235677;
 }
 
 .title-surah {
   text-align: center;
   font-size: 1.3rem;
+  margin-bottom: -4rem;
 }
 
 .container {
@@ -17,4 +46,11 @@
 
 .content {
   padding: 6px;
+}
+
+@media (max-width: 430px) {
+  .search-form input {
+    height: 34px;
+    width: 100%;
+  }
 }
