--- a/styles/Quran.module.css
+++ b/styles/Quran.module.css
@@ -1,3 +1,15 @@
+.header {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background-color: white;
+}
+
 .title-page {
   text-align: center;
   margin-top: 5rem;
@@ -15,6 +27,7 @@
   height: 35px;
   width: 30%;
   border: solid 3px #113a55;
+  margin-bottom: 10px;
 }
 
 .search-form p {
@@ -30,18 +43,27 @@
   background-color: #235677;
 }
 
+.container {
+  margin-top: 20%;
+}
+
+.card-content {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  /* width: 50%; */
+  cursor: pointer;
+  padding: 8px;
+}
+
 .title-surah {
   text-align: center;
   font-size: 1.3rem;
   margin-bottom: -4rem;
 }
 
-.container {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  /* width: 50%; */
-  cursor: pointer;
-  padding: 8px;
+.sub-title-surah {
+  text-align: center;
+  margin-top: 5rem;
 }
 
 .content {
@@ -52,5 +74,15 @@
   .search-form input {
     height: 34px;
     width: 100%;
+  }
+
+  .container {
+    margin-top: 40%;
+  }
+}
+
+@media (max-width: 378px) {
+  .container {
+    margin-top: 50%;
   }
 }
