--- a/pages/quran/Surah.module.css
+++ b/pages/quran/Surah.module.css
@@ -1,3 +1,34 @@
+.jump-container {
+  margin-top: 3%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  width: 100%;
+  background-color: white;
+  top: 0;
+}
+
+.jump-container input {
+  height: 35px;
+  width: 30%;
+  border: solid 3px #113a55;
+  margin: 0 5px;
+}
+
+.btn {
+  background-color: #113a55;
+  padding: 8px 12px;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #3a6683;
+}
+
 .container {
   margin-top: 100px;
 }
@@ -23,8 +54,32 @@
   font-size: 1.2rem;
 }
 
+@media (max-width: 885px) {
+  .jump-container {
+    margin-top: 6%;
+  }
+}
+
 @media (max-width: 430px) {
+  .jump-container {
+    margin-top: 12%;
+  }
+
+  .jump-container input {
+    width: 50%;
+  }
+
   .arti {
     padding: 8px;
+  }
+}
+
+@media (max-width: 330px) {
+  .jump-container {
+    margin-top: 15%;
+  }
+
+  .jump-container input {
+    width: 60%;
   }
 }
