change CSR to SSR && add NProgress loader

--- a/pages/quran/Surah.module.css
+++ b/pages/quran/Surah.module.css
@@ -39,7 +39,7 @@
   background-color: #f1e294;
   display: flex;
   align-items: center;
-  justify-content: end;
+  /* justify-content: end; */
   flex-direction: column;
 }
 
