--- a/component/navbar/Navbar.module.css
+++ b/component/navbar/Navbar.module.css
@@ -37,3 +37,33 @@
 .menu-item:last-child {
   margin-right: 0px;
 }
+
+.menu-icon {
+  color: white;
+  cursor: pointer;
+  display: none;
+}
+
+.menu-icon:active {
+  transform: rotate(360deg);
+  transition: 1ms;
+}
+
+.show {
+  right: -100%;
+  transition: 1s;
+}
+.show.active {
+  right: 0;
+  transition: 1s;
+}
+
+@media (max-width: 991px) {
+  .menu-icon {
+    display: block;
+    font-size: 1.5rem;
+  }
+  .menu-item {
+    display: none;
+  }
+}
