--- a/pages/dzikir/index.module.css
+++ b/pages/dzikir/index.module.css
@@ -1,6 +1,70 @@
 .container {
-  margin-top: 100px;
+  min-height: 95vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .title {
   text-align: center;
+  color: #113a55;
+}
+
+.counter {
+  width: 100%;
+  padding: 5rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.counter p {
+  margin: 0 0;
+  font-size: 10rem;
+  color: #ffcf36;
+}
+
+.title button {
+  background: none;
+  border: none;
+  outline: none;
+}
+
+.title button::after {
+  content: " ";
+  width: 100px;
+  height: 100px;
+  background: #ffcf36;
+  display: block;
+  margin: auto;
+  margin-top: -97px;
+  border-radius: 50%;
+}
+
+.title button:active::after {
+  content: " ";
+  width: 100px;
+  height: 100px;
+  background: #ffcf36;
+  display: block;
+  margin: auto;
+  margin-top: -103px;
+  border-radius: 50%;
+}
+
+.title button:active {
+  margin-top: 5px;
+}
+
+.image {
+  position: absolute;
+  cursor: pointer;
+  box-shadow: 0px 23px 0px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 23px 0px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 23px 0px 0px rgba(0, 0, 0, 0.75);
+}
+
+@media (max-width: 320px) {
+  .counter {
+    padding: 2rem 0;
+  }
 }
