--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,10 +27,11 @@ ul {
   box-shadow: 0 0 10px #ffbb00, 0 0 5px #ffbb00 !important;
 }
 
-swal2-popup {
+.swal2-popup {
   border-radius: 0px !important;
 }
 
-.swal2-styled.swal2-confirm {
+.swal2-styled.swal2-confirm,
+.swal2-styled.swal2-cancel {
   border-radius: 0 !important;
 }
