--- a/pages/dzikir/index.module.css
+++ b/pages/dzikir/index.module.css
@@ -28,7 +28,7 @@
 .counter {
   width: 100%;
   padding: 1rem 0;
-  display: 2lex;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
