--- a/pages/dzikir/index.module.css
+++ b/pages/dzikir/index.module.css
@@ -2,8 +2,8 @@
   min-height: 95vh;
   display: flex;
   justify-content: center;
-  /* align-items: center; */
 }
+
 .title {
   text-align: center;
   color: #113a55;
@@ -76,6 +76,7 @@
   box-shadow: 0px 23px 0px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 0px 23px 0px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 23px 0px 0px rgba(0, 0, 0, 0.75);
+  z-index: 20;
 }
 
 @media (max-width: 320px) {
