--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,14 @@ ul {
 #nprogress .bar {
   background: #ffbb00 !important;
   height: 6px !important;
+
+  position: fixed;
+  z-index: 1031;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 2px;
 }
 
 #nprogress .peg {
